# qprompts

./: frontmatter.py  generate_modules.py  hello.py  prompt_structure.py  pyproject.toml
prompt_class/openai/generate_topics/select_topic/v1/: select_topic.py
prompt_class/openai/generate_topics/v1/: generate_topic_candidates.py
prompt_class/openai/generate_topics/v2/: generate_topic_candidates.py
prompt_class/openai/generate_topics/v3/: generate_topic_candidates.py
prompts/openai/generate_topics/v1/: generate_topic_candidates.prompty
prompts/openai/generate_topics/v3/: generate_topic_candidates.prompty
